Fix undo button not showing up

--- a/learning/app/main/styles/main.less
+++ b/learning/app/main/styles/main.less
@@ -354,6 +354,10 @@ label[for='toggle-all'] {
     }
 }
 
+#header:hover .undo-active {
+  	display: block;
+}
+
 #todo-list li .edit {
 	display: none;
 }
